src/test/examples/invalid/semanticErr/variables/bigIntAssignment.wacc
# int assignment overlow

# Output:
# #syntax_error# (used to be, in given wacc_example)
# #semantic_error#

# Exit:
# 100

# Program:

begin
  int x = 2200000000 
end
